@@ -2,6 +2,9 @@
 
 <!-- Master -->
 
+* Implement intermediate directory to convert to path
+  which already exist but to be converted.
+
 == Version 0.0.9 [2016-07-12] released
 
 * Add --git option
